[workspace]
resolver = "3"
members = [
    "bench-suite-collect",
    "bench-suite-run", "custom-float",
]

[workspace.dependencies]
polars = {version="0.x", default-features=false, features=["csv", "parquet","performant"]}
anyhow = "1.0.x"
serde = { version = "1.0.x",features=["derive"]}
serde_json = "1.0.x"
tar = "0.4.44"

[profile.release]
lto = "thin"
codegen-units = 1
