[package]
name = "polars-helpers"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = "warn"

[dependencies]
polars = {workspace=true}
polars-core = {version = "0.53.0", default-features = false}
polars-io = {version = "0.53.0", default-features = false, features = ["parquet"]}
polars-parquet = {version = "0.53.0", default-features = false, features = ["compression"]}
