[package]
name = "bench-suite-collector-config"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = "warn"

[dependencies]
polars = {workspace = true}
bench-suite-types = {path="../../bench-suite-types",features=["polars"]}
bench-suite-collect-results = {path="../../bench-suite-collect-results"}
string-intern = {workspace = true}
anyhow = {workspace = true}
