[package]
name = "bench-suite-collector-dacapo-iteration"
version = "0.1.0"
edition = "2024"

[dependencies]
polars = {workspace = true}
bench-suite-types = {path="../../bench-suite-types"}
bench-suite-collect-results = {path="../../bench-suite-collect-results"}
string-intern = {path="../../string-intern"}
anyhow = {workspace = true}
regex = "1"
